# of-compartments

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: cell_sim_batch.py  cell_sim_eddy_bubble_damage.py
examples/compartment_data/case_200000L/: compartment_config  compartment_values.csv  interface_values.csv
examples/compartment_data/case_20000L/: compartment_config  compartment_values.csv  interface_values.csv
examples/compartment_data/case_2000L/: compartment_config  compartment_values.csv  interface_values.csv
examples/compartment_data/case_200L/: compartment_config  compartment_values.csv  interface_values.csv
of_compartments/: __init__.py  pv_getFlux.py  utils.py
of_compartments/applications/: clone_case.py  create_compartments.py  view_compartment_data.py
of_compartments/cellgrowth/: compartment_model.py  damage_models.py  growth_models.py
of_compartments/openfoam/: __init__.py  _function_object_templates.py  _toposet_templates.py  compartment_data_reader.py  create_compartment_toposet.py  create_function_objects.py  write_compartment_values.py
tests/: test_compartment_function_objects.py  test_compartment_model.py  test_damage_models.py  test_toposet_templates.py  test_utils.py
tests/data/test_case/: compartment_config  set_up_mesh.sh
tests/data/test_case/constant/polyMesh/: boundary  neighbour  owner
tests/data/test_case/system/: blockMeshDict  controlDict  controlDict.compartments  controlDict.newFields  topoSetDict.orig
